--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -136,6 +136,26 @@ button:hover {
   display: none;
 }
 
+.participants {
+  margin-top: 15px;
+  padding: 10px;
+  background-color: #f1f8e9;
+  border: 1px solid #c5e1a5;
+  border-radius: 5px;
+}
+
+.participants ul {
+  margin: 10px 0 0 20px;
+  padding: 0;
+  list-style-type: disc;
+}
+
+.participants li {
+  margin-bottom: 5px;
+  color: #2e7d32;
+  font-size: 14px;
+}
+
 footer {
   text-align: center;
   margin-top: 30px;
